Fixed side navigation badges not showing correctly [#1179]

--- a/comixed-webui/src/app/components/side-navigation/side-navigation.component.scss
+++ b/comixed-webui/src/app/components/side-navigation/side-navigation.component.scss
@@ -16,6 +16,13 @@
   mat-icon {
     margin-right: 8px;
   }
+
+  .mat-badge-content {
+    display: inline-block;
+    position: relative;
+    top: 0 !important;
+    right: 0 !important;
+  }
 }
 
 .active {
